force-app/main/terms-and-conditions/objects/Terms_And_Conditions__c/Terms_And_Conditions__c.object-meta.xml
<CustomObject>
    <label>Terms And Conditions</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Terms And Conditions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms And Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>