force-app/main/terms-and-conditions/objects/Terms_And_Conditions__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Portal T&amp;C</label>
    <type>Checkbox</type>
</CustomField>