force-app/main/terms-and-conditions/objects/Terms_And_Conditions__c/fields/Community_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Name__c</fullName>
    <label>Community Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IQVIA Referral Hub</fullName>
                <default>true</default>
                <label>IQVIA Referral Hub</label>
            </value>
            <value>
                <fullName>GSK Community</fullName>
            </value>
            <value>
                <fullName>IQVIA Patient Portal</fullName>
            </value>
            <value>
                <fullName>Janssen Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>