force-app/main/terms-and-conditions/objects/Terms_And_Conditions__c/fields/Last_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_on__c</fullName>
    <label>Last Updated on</label>
    <length>250</length>
    <type>Text</type>
</CustomField>