force-app/main/terms-and-conditions/objects/Terms_And_Conditions__c/fields/Master_Terms_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Master_Terms_And_Conditions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Terms or Policies</label>
    <referenceTo>Terms_And_Conditions__c</referenceTo>
    <relationshipLabel>Terms And Conditions</relationshipLabel>
    <relationshipName>Terms_And_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>