force-app/main/terms-and-conditions/objects/Terms_And_Conditions__c/fields/Policy_Headers__c.field-meta.xml
<CustomField>
    <fullName>Policy_Headers__c</fullName>
    <label>Policy Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>