force-app/main/terms-and-conditions/objects/Terms_And_Conditions__c/fields/T_C_Text__c.field-meta.xml
<CustomField>
    <fullName>T_C_Text__c</fullName>
    <label>T&amp;C Text</label>
    <length>65536</length>
    <type>Html</type>
</CustomField>