force-app/main/terms-and-conditions/objects/Terms_And_Conditions__c/fields/T_C_Type__c.field-meta.xml
<CustomField>
    <fullName>T_C_Type__c</fullName>
    <label>T&amp;C Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Privacy Policy</fullName>
            </value>
            <value>
                <fullName>Terms and Conditions</fullName>
                <default>true</default>
                <label>Terms and Conditions</label>
            </value>
            <value>
                <fullName>Cookie Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>