force-app/main/terms-and-conditions/objects/Terms_And_Conditions__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <label>Unique Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>