force-app/main/terms-and-conditions/objects/Terms_And_Conditions__c/validationRules/Validate_Language_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Language_Field</fullName>
    <active>true</active>
    <errorConditionFormula>Master_Terms_And_Conditions__c != null &amp;&amp;   
ISPICKVAL( Language__c , &apos;&apos;)</errorConditionFormula>
    <errorMessage>Language field required</errorMessage>
</ValidationRule>